# Cellular-automatons

./: .isort.cfg  README.md  main.py  pyproject.toml
cellular_automatons/onedimensional/: __init__.py  wolfram_code_automaton.py
cellular_automatons/twodimensional/: __init__.py  fire_propagation.py  game_of_life.py  matplotlib_visualizer_example.py  pygame_visualizer_example_fire_propagation_1.py  pygame_visualizer_example_fire_propagation_2.py  pygame_visualizer_example_game_of_life.py  pygame_visualizer_example_wireword.py  wireword.py
