[tool.poetry]
name = "cellular_automatons"
version = "0.1.0"
description = "A collection of cellular automatons that use the PyCellsLib library"
authors = ["Luis Papiernik <lpapiernik24@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pycellslib = "^0.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
